# BlockMerge

./: INSTALL  README.md  configure.ac
src/: Makefile.am  a.out  block.c  block.h  game.h  grid.c  grid.h  main.c
